<resources>
    <string name="app_name" translatable="false">TravelBuddy</string>
    <string name="about">About</string>
    <string name="About_information">"TravelBuddy by\n\nMatteo Sissa\nNicolas Descoteaux\n\nDeveloped for DADM 2025"</string>
    <string name="activities">Activities</string>
    <string name="budget">Budget</string>
    <string name="date">Departure date</string>
    <string name="Trips">Trips</string>
    <string name="description_fab_add_site_guide">Add a new site for the guide</string>
    <string name="description_from_the_traveller_title">Description from the traveller:</string>
    <string name="lore_ipsum_test" translatable="false">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of</string>
    <string name="button_contact_traveller">Contact Them</string>
    <string name="add_new_trip">New trip</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="select_date">Select date</string>
    <string name="duration_days">Duration (days)</string>
    <string name="description">Description</string>
    <string name="create_trip">Create trip</string>
    <string name="field_required">This field is required</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm">Confirm</string>
    <string name="welcome">Welcome!</string>
    <string name="guide_icon">Guide</string>
    <string name="hint_create_new_site_location">Location name</string>
    <string name="add">Add</string>
    <string name="country_name">Country name</string>
    <string name="hint_guide_message">Write your message here</string>
    <string name="chat_with_them_button">Chat with them</string>
    <string name="enter_your_phone_number_welcome_screen">Enter your phone number</string>
    <string name="filter_trips">Filter Trips</string>
    <string name="toggle_filters">Toggle filters</string>
    <string name="maximum_budget">Maximum Budget</string>
    <string name="_5000" translatable="false">€5000</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="matteo_sissa" translatable="false">Matteo Sissa</string>
    <string name="_16_05_2025" translatable="false">16/05/2025</string>
    <string name="_2_weeks">2 weeks</string>
    <string name="log_out_menu">Log out</string>
    <string name="please_fill_in_all_fields_error_add_site">Please fill in all fields</string>
    <string name="site_successfully_added_guide">Site successfully added</string>
    <string name="error_adding_the_site_guide">Error adding the site</string>
    <string name="guide_sites_successfully_retrieved_toast">Guide sites successfully retrieved</string>
    <string name="error_while_trying_to_get_guide_sites_toast">Error while trying to get guide sites</string>
    <string name="error_getting_trips_by_location_toast">Error getting trips by location</string>
    <string name="trips_filtered_by_budget_toast">Trips filtered by budget</string>
    <string name="error_filtering_trips_by_budget_toast">Error filtering trips by budget</string>
    <string name="answer_to_trip_added_successfully_toast">Answer to trip added successfully</string>
    <string name="error_adding_answer_to_trip_toast">Error adding answer to trip</string>
    <string name="add_answer_for_the_traveller_title_dialog">Add answer for the traveller</string>
    <string name="send_dialog_button">Send</string>
    <string name="message_cannot_be_empty_error_dialog">Message cannot be empty</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout_successful_toast">Logout successful</string>
    <string name="logout_failed_toast">Logout failed</string>
    <string name="error_loading_trip_answers_toast">Error loading trip answers</string>
    <string name="trip_created_successfully_toast">Trip created successfully</string>
    <string name="error_creating_trip_toast">Error creating trip</string>
    <string name="error_fetching_trips_toast">Error fetching trips</string>
    <string name="new_user_registered_successfully_toast">New user registered successfully</string>
    <string name="user_logged_in_successfully_toast">User logged in successfully</string>
    <string name="error_logging_in_user_toast">Error logging in user</string>
    <string name="please_enter_a_valid_username_and_phone_number_error_welcome">Please enter a valid username and phone number</string>
    <string name="no_internet_connection_dialog">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again_dialog">Please check your internet connection and try again.</string>
    <string name="trip_successfully_deleted_Toas">Trip successfully deleted</string>
    <string name="error_deleting_the_trip_toast">Error deleting the trip</string>
    <string name="your_site_has_been_deleted_successfully_toast">Your site has been deleted successfully</string>
    <string name="there_was_a_problem_deleting_the_site_toast">There was a problem deleting the site</string>
    <string name="are_you_sure_you_want_to_logout_dialog_title">Are you sure you want to logout?</string>
    <string name="your_trips">Your trips</string>
    <string name="create_new_trip">Create a new trip</string>
    <string name="trip_requests">Trip requests</string>
    <string name="add_guide_location">Add guide location</string>
    <string name="answers_received">Answers received</string>
    <string name="locations">Locations</string>
    <string name="logout_confirmation_title">Confirm Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <plurals name="trip_duration_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="trip_budget_euro" translatable="false">€%d</string>
</resources>