<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/tripFragment">

    <fragment
        android:id="@+id/tripFragment"
        android:name="dadm.ndescot.travelbuddy.ui.trip.TripFragment"
        android:label="@string/your_trips" >
        <action
            android:id="@+id/action_tripFragment_to_createTripFragment"
            app:destination="@id/createTripFragment" />
        <action
            android:id="@+id/action_tripFragment_to_tripAnswersFragment"
            app:destination="@id/tripAnswersFragment" />
        <action
            android:id="@+id/action_tripFragment_to_guideSitesFragment"
            app:destination="@id/guideSitesFragment" />
    </fragment>
    <fragment
        android:id="@+id/createTripFragment"
        android:name="dadm.ndescot.travelbuddy.ui.trip.CreateTripFragment"
        android:label="@string/create_new_trip" />
    <fragment
        android:id="@+id/requestGuideFragment"
        android:name="dadm.ndescot.travelbuddy.ui.guide.requests.RequestGuideFragment"
        android:label="@string/trip_requests" >
        <argument
            android:name="site"
            app:argType="dadm.ndescot.travelbuddy.domain.model.Site" />
    </fragment>
    <fragment
        android:id="@+id/addSiteFragment"
        android:name="dadm.ndescot.travelbuddy.ui.guide.addsite.AddSiteFragment"
        android:label="@string/add_guide_location" />
    <fragment
        android:id="@+id/tripAnswersFragment"
        android:name="dadm.ndescot.travelbuddy.ui.trip.tripanswers.TripAnswersFragment"
        android:label="@string/answers_received" >
        <argument
            android:name="tripId"
            app:argType="integer" />
    </fragment>
    <dialog
        android:id="@+id/aboutDialogFragment"
        android:name="dadm.ndescot.travelbuddy.ui.about.AboutDialogFragment"
        android:label="@string/about" />
    <fragment
        android:id="@+id/guideSitesFragment"
        android:name="dadm.ndescot.travelbuddy.ui.guide.home.GuideSitesFragment"
        android:label="@string/locations" >
        <action
            android:id="@+id/action_guideSitesFragment_to_requestGuideFragment"
            app:destination="@id/requestGuideFragment" />
        <action
            android:id="@+id/action_guideSitesFragment_to_addSiteFragment"
            app:destination="@id/addSiteFragment" />
    </fragment>
</navigation>