<?xml version="1.0" encoding="utf-8"?>
<!--
This card represents the request of a traveller with all the relevant information for the guide to
decide whether to send a message or not
-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    style="@style/DefaultCardStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTravellerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"


            android:text="Matteo Sissa"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"

            app:layout_constraintTop_toBottomOf="@+id/tvTravellerName"
            app:layout_constraintStart_toStartOf="parent"

            android:text="16/05/2025"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"

            app:layout_constraintTop_toBottomOf="@+id/tvStartDate"
            app:layout_constraintStart_toStartOf="parent"

            android:text="2 weeks"/>

        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"

            app:layout_constraintTop_toBottomOf="@+id/tvDuration"
            app:layout_constraintStart_toStartOf="parent"

            android:textStyle="bold"
            android:text="@string/description_from_the_traveller_title" />


        <TextView
            android:id="@+id/tvTravellerDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_marginHorizontal="8dp"

            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/lore_ipsum_test"/>

        <Button
            android:id="@+id/btContactThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintTop_toBottomOf="@+id/tvTravellerDescription"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/button_contact_traveller"
            android:textColor="@color/black"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>